fixing sidemenu scrollbar bug

--- a/src/css/components/sidemenu.css
+++ b/src/css/components/sidemenu.css
@@ -75,7 +75,7 @@ button.sdm-item {
 
 .sdm-ir-container {
   display: flex;
-  width: 100%;
+  width: calc( 100% + 15px );
   flex-direction: row;
   flex-wrap: wrap;
   padding: 1rem;
