--- a/src/css/home.css
+++ b/src/css/home.css
@@ -15,7 +15,6 @@
   font-family: "", "Rubik";
 }
 body {
-  scrollbar-gutter: stable;
   padding: 0 !important;
   margin: 0 !important;
   width: 100%;
